--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ configurations {
 dependencies {
     compile "com.iexec.common:iexec-common-new:$iexecCommonVersion"
 	compile "org.springframework.boot:spring-boot-starter"
+    compile "org.springframework.boot:spring-boot-starter-data-mongodb"
 
 	testCompile "org.springframework.boot:spring-boot-starter-test"
     deployerJars "io.packagecloud.maven.wagon:maven-packagecloud-wagon:0.0.6"
