--- a/build.gradle
+++ b/build.gradle
@@ -38,11 +38,14 @@ configurations {
 dependencies {
     // iexec
     compile "com.iexec.common:iexec-common-new:$iexecCommonVersion"
+    //compile files('../iexec-common-new/build/libs/iexec-common-new-0.0.1-SNAPSHOT.jar')
 
     // spring
     compile "org.springframework.boot:spring-boot-starter"
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-data-mongodb"
+    compile "org.springframework.boot:spring-boot-starter-websocket"
+
     testCompile "org.springframework.boot:spring-boot-starter-test"
 
     // swagger
