Add synchronization in the new replicate creation process

--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-data-mongodb"
     compile "org.springframework.boot:spring-boot-starter-websocket"
+    compile "org.springframework.retry:spring-retry"
+    compile "org.springframework.boot:spring-boot-starter-aop"
 
     testCompile "org.springframework.boot:spring-boot-starter-test"
 
