--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'maven'
+apply plugin: 'jacoco'
 
 group = 'com.iexec.core'
 sourceCompatibility = 1.8
@@ -61,6 +62,13 @@ dependencies {
 	// package cloud
     deployerJars "io.packagecloud.maven.wagon:maven-packagecloud-wagon:0.0.6"
 }
+
+jacoco {
+    toolVersion = "0.8.1"
+    reportsDir = file("$buildDir/TestCoverageReport")
+}
+// the test coverage report will be created just before the build
+build.dependsOn jacocoTestReport
 
 def gitBranch = 'git name-rev --name-only HEAD'.execute().text.trim()
 def isMasterBranch = gitBranch == "remotes/origin/master"
