Added gradle task for build and push docker image

--- a/build.gradle
+++ b/build.gradle
@@ -103,7 +103,36 @@ task createVersion(type: Copy) {
 // the createVersion task should be called before compileJava or the version service will not work
 compileJava.dependsOn createVersion
 
+project.ext.getDockerImageName = {
+    return "iexechub/iexec-core:${version}"
+}
+
+task prepareDockerFile(type: Copy) {
+    delete 'build/main/resources/'
+    from 'src/main/resources/Dockerfile'
+    into 'build/main/resources/'
+    filter(ReplaceTokens, tokens: [projectversion: "${version}".toString()])
+}
+
+
 task buildImage(type: Exec) {
     description 'Build a docker image for the core'
-    commandLine("sh", "-c", "docker image build -f src/main/resources/Dockerfile -t iexechub/core:${version} .")
+    commandLine("sh", "-c", "docker image build -f build/main/resources/Dockerfile -t "+ getDockerImageName() +" .")
 }
+
+buildImage.dependsOn prepareDockerFile
+
+
+task pushImage(type: Exec) {
+    if (project.hasProperty("dockerHubUser") && project.hasProperty("dockerHubPassword")) {
+        commandLine("sh", "-c", "docker login -u " + project.dockerHubUser + " -p " + project.dockerHubPassword + " && " +
+                "docker push " + getDockerImageName() + " && " +
+                "docker logout")
+    } else {
+        println "Credentials for DockerHub are missing, the images cannot be pushed"
+    }
+}
+
+pushImage.dependsOn buildImage
+
+pushImage.enabled = isMasterBranch && project.hasProperty("dockerHubUser") && project.hasProperty("dockerHubPassword")
