--- a/src/main/resources/Dockerfile
+++ b/src/main/resources/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8u171-jre-alpine
 
-ADD build/libs/iexec-core-*.jar iexec-core.jar
+ADD build/libs/iexec-core-@projectversion@.jar iexec-core.jar
 
 ENTRYPOINT ["java","-jar","/iexec-core.jar"]
