--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,7 @@ spring:
 detector:
   workerlost.period: 30000
   resultuploadtimeout.period: 30000
+
+chain:
+  address: ${IEXEC_CHAIN_ADDRESS:http://localhost:8545}
+  poolAddress: "0xdBB8eA3FCc53B67521685DFa02d7C06313FdE0aA"
