--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,5 +14,7 @@ detector:
   resultuploadtimeout.period: 30000
 
 chain:
-  address: ${IEXEC_CHAIN_ADDRESS:http://localhost:8545}
-  poolAddress: "0xdBB8eA3FCc53B67521685DFa02d7C06313FdE0aA"
+  privateAddress: ${IEXEC_PRIVATE_CHAIN_ADDRESS:http://localhost:8545}
+  publicAddress: ${IEXEC_PUBLIC_CHAIN_ADDRESS:http://localhost:8545}
+  hubAddress: ${IEXEC_HUB_ADDRESS:0x537C423A919110BcC8C05ecBDa39Ba8d30192061}
+  poolAddress: ${POOL_ADDRESS:0xdBB8eA3FCc53B67521685DFa02d7C06313FdE0aA}
