Add reveal timeout for single replicate

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ detector:
   workerlost.period: 30000           # 30 s
   resultuploadtimeout.period: 30000  # 30 s
   dealwatcherreplay.period: 60000    # 1 min
-  revealtimeout.period: 300000       # 5 min
+  revealtimeout.period: ${REVEAL_TIMEOUT_PERIOD:300000}       # 5 min
 
 
 wallet:
