--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,3 +27,6 @@ chain:
   publicAddress: ${IEXEC_PUBLIC_CHAIN_ADDRESS:http://localhost:8545}
   hubAddress: ${IEXEC_HUB_ADDRESS:0x5df493e91aE066541C13d9a071137e850a56d609}
   poolAddress: ${POOL_ADDRESS:0x46f18edc77700277192ee6f8a4f0c0b889c845ca}
+
+tee:
+  enclaveChallenge: 0x3cb738d98d7a70e81e81b0811fae2452bca049bc
