--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,4 +29,4 @@ chain:
   poolAddress: ${POOL_ADDRESS:0x46f18edc77700277192ee6f8a4f0c0b889c845ca}
 
 tee:
-  enclaveChallenge: 0x3cb738d98d7a70e81e81b0811fae2452bca049bc
+  enclaveChallenge: "0x3cb738d98d7a70e81e81b0811fae2452bca049bc"
