--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,6 +28,7 @@ chain:
   publicAddress: ${IEXEC_PUBLIC_CHAIN_ADDRESS:http://localhost:8545}
   hubAddress: ${IEXEC_HUB_ADDRESS:0x5df493e91aE066541C13d9a071137e850a56d609}
   poolAddress: ${POOL_ADDRESS:0x46f18edc77700277192ee6f8a4f0c0b889c845ca}
+  startBlockNumber: ${IEXEC_START_BLOCK_NUMBER:0}
 
 workers:
   askForReplicatePeriod: ${IEXEC_ASK_REPLICATE_PERIOD:5000}
