--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,9 +13,10 @@ detector:
   workerlost.period: 30000           # 30 s
   resultuploadtimeout.period: 30000  # 30 s
   dealwatcherreplay.period: 60000    # 1 min
-  revealtimeout.period: ${REVEAL_TIMEOUT_PERIOD:300000}       # 5 min
+  reveal.timeout.period: ${REVEAL_TIMEOUT_PERIOD:300000}       # 5 min
   reveal.unnotified.period: 60000       # 1 min
-  contribute.period: 300000
+  contribution.unnotified.period: 300000           # 5 min
+  contribution.timeout.period: 300000           # 5 min
   unstartedtx.period: 300000          # 5 min
 
 
