--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,14 +10,14 @@ spring:
 
 # all in milliseconds
 detector:
-  workerlost.period: 30000           # 30 s
-  resultuploadtimeout.period: 30000  # 30 s
-  dealwatcherreplay.period: 60000    # 1 min
-  reveal.timeout.period: ${REVEAL_TIMEOUT_PERIOD:60000}       # 1 min
-  reveal.unnotified.period: 60000       # 1 min
-  contribution.unnotified.period: 120000           # 2 min
-  contribution.timeout.period: 120000           # 2 min
-  unstartedtx.period: 300000          # 5 min
+  workerlost.period: 30000              # 30 s
+  resultuploadtimeout.period: 30000     # 30 s
+  dealwatcherreplay.period: 60000       # 1 min
+  reveal.timeout.period: ${REVEAL_TIMEOUT_PERIOD:120000}       # 2 min
+  reveal.unnotified.period: 30000       # 30s
+  contribution.unnotified.period: 30000 # 30s
+  contribution.timeout.period: 120000   # 2 min
+  unstartedtx.period: 300000            # 5 min
 
 
 wallet:
