--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-iexecCommonVersion=0.0.1-SNAPSHOT
+iexecCommonVersion=3.0.0-alpha1
 packageCloudPassword=fake
-version=0.0.1-SNAPSHOT
+version=3.0.0-alpha1
