Set ip pour resultRepo

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,3 +37,10 @@ tee:
 
 workers:
   askForReplicatePeriod: ${IEXEC_ASK_REPLICATE_PERIOD:5000}
+
+
+resultRepository:
+  protocol: ${IEXEC_RESULT_REPOSITORY_PROTOCOL:http}
+  ip: ${IEXEC_RESULT_REPOSITORY_IP:localhost}
+  port: ${server.port}
+
