--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ artifacts {
 dependencies {
     // iexec
     compile "com.iexec.common:iexec-common:$iexecCommonVersion"
-    //compile files('../iexec-common/build/libs/iexec-common-3.0.0-SNAPSHOT.jar')
+    //compile files('../iexec-common/build/libs/iexec-common-${iexecCommonVersion}.jar')
 
     // spring
     compile "org.springframework.boot:spring-boot-starter"
