use spring actuator

--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     compile "org.springframework.retry:spring-retry"
     compile "org.springframework.boot:spring-boot-starter-aop"
     compile "org.springframework.boot:spring-boot-starter-security"
+    compile "org.springframework.boot:spring-boot-starter-actuator"
 
     testCompile "org.springframework.boot:spring-boot-starter-test"
 
