--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,10 @@
 server:
   port: ${IEXEC_CORE_PORT:18090}
+  ssl:
+    key-store: ${IEXEC_CORE_SSL_KEYSTORE:./src/main/resources/ssl-keystore-dev.p12}
+    key-store-password: ${IEXEC_CORE_SSL_PASSWORD:whatever}
+    keyStoreType: PKCS12
+    keyAlias: ${IEXEC_CORE_SSL_ALIAS:iexec-core}
 
 spring:
   data:
