--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ repositories {
     maven {
         url "https://packagecloud.io/priv/${token}/iexec/common/maven2"
     }
+    maven { url "https://jitpack.io" }
 }
 
 configurations {
@@ -87,6 +88,9 @@ dependencies {
 
     // expiring map
     compile "net.jodah:expiringmap:0.5.8"
+
+    // ipfs java client
+    compile 'com.github.ipfs:java-ipfs-http-client:1.2.3'
 }
 
 jacoco {
