Change hard-coded values

--- a/build.gradle
+++ b/build.gradle
@@ -100,7 +100,7 @@ jacoco {
 build.dependsOn jacocoTestReport
 
 def gitBranch = 'git name-rev --name-only HEAD'.execute().text.trim()
-def isMasterBranch = true // gitBranch == "remotes/origin/master"
+def isMasterBranch = gitBranch == "remotes/origin/master"
 def canUploadArchives = isMasterBranch && project.hasProperty("nexusUser") && project.hasProperty("nexusPassword")
 def gitShortCommit = 'git rev-parse --short HEAD'.execute().text.trim()
 def isSnapshotVersion = project.version.contains("SNAPSHOT")
