--- a/build.gradle
+++ b/build.gradle
@@ -20,13 +20,13 @@ apply plugin: 'jacoco'
 
 group = 'com.iexec.core'
 sourceCompatibility = 1.8
-def nexusMaven = "https://nexus.iex.ec/repository/maven-public/"
+
 
 repositories {
     mavenCentral()
     jcenter()
     maven {
-        url nexusMaven
+        url "https://nexus.iex.ec/repository/maven-public/"
     }
 
     maven { url "https://jitpack.io" }
@@ -106,15 +106,23 @@ def canUploadArchives = isMasterBranch && project.hasProperty("nexusUser") && pr
 def gitShortCommit = 'git rev-parse --short HEAD'.execute().text.trim()
 def isSnapshotVersion = project.version.contains("SNAPSHOT")
 
-uploadSpringBootJar {
+project.ext.getNexusMaven = {
+    def nexusMavenBase = "https://nexus.iex.ec/repository"
+    if (isSnapshotVersion) {
+        return nexusMavenBase + "/maven-snapshots/"
+    } else {
+        return nexusMavenBase + "/maven-releases/"
+    }
+}
 
+uploadSpringBootJar {
     description 'Upload the executable jar version of the core'
     repositories.mavenDeployer {
         pom.groupId = project.group
         pom.artifactId = project.name
         pom.version = version
         configuration = configurations.springBootJar
-        repository(url: nexusMaven) {
+        repository(url: getNexusMaven()) {
             authentication(userName: project.nexusUser, password: project.nexusPassword)
         }
     }
@@ -127,7 +135,7 @@ uploadLibraryJar {
         pom.artifactId = LIBRARY_JAR_NAME
         pom.version = version
         configuration = configurations.libraryJar
-        repository(url: nexusMaven) {
+        repository(url: getNexusMaven()) {
             authentication(userName: project.nexusUser, password: project.nexusPassword)
         }
     }
