--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,12 +39,12 @@ workers:
 
 resultRepository:
   protocol: ${IEXEC_RESULT_REPOSITORY_PROTOCOL:http}
-  host: ${IEXEC_RESULT_REPOSITORY_IP:localhost}
+  host: ${IEXEC_RESULT_REPOSITORY_HOST:localhost}
   port: ${IEXEC_RESULT_REPOSITORY_PORT:18090}
 
 sms:
   protocol: ${IEXEC_SMS_PROTOCOL:http}
-  host: ${IEXEC_SMS_IP:localhost}
+  host: ${IEXEC_SMS_HOST:localhost}
   port: ${IEXEC_SMS_PORT:5000}
 
 ipfs:
