--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-iexecCommonVersion=3.0.0-SNAPSHOT
+iexecCommonVersion=3.0.0-alpha3
 nexusUser=fake
 nexusPassword=fake
-version=3.0.0-SNAPSHOT
+version=3.0.0-alpha3
 
