Revert "Release 3.0.0-alpha3"
This reverts commit 0d0f20d330e4dec30683c46246822afcc8e6880f.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-iexecCommonVersion=3.0.0-alpha3
+iexecCommonVersion=3.0.0-SNAPSHOT
 nexusUser=fake
 nexusPassword=fake
-version=3.0.0-alpha3
+version=3.0.0-SNAPSHOT
 
