--- a/src/main/resources/Version.java.template
+++ b/src/main/resources/Version.java.template
@@ -1,16 +1,5 @@
-package com.iexec.core.utils;
+package com.iexec.core.utils.version;
 
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RestController;
-
-@RestController
-public class Version {
-
-    public String PROJECT_VERSION = "@projectversion@";
-
-    @GetMapping("/version")
-    public ResponseEntity getVersion() {
-        return ResponseEntity.ok(PROJECT_VERSION);
-    }
+class Version {
+    static final String PROJECT_VERSION = "@projectversion@";
 }
